Lab2_Container-K8s/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
spec:
  containers:
    - name: db
      image: mongo
      ports:
        - containerPort: 27017

    - name: backend
      image: ghcr.io/au2a/nycu_cloud-native-lab2-backend:latest
      ports:
        - containerPort: 5273
    - name: frontend
      image: ghcr.io/au2a/nycu_cloud-native-lab2-frontend:latest
      ports:
        - containerPort: 5173
