Lab2_Container-K8s/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: db-clusterip
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
